Separate parallellizable functions for class Matrix into Matrix_omp.cpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,7 @@ ${CMAKE_BINARY_DIR}/include)
 add_library(rcgomp
   ${CMAKE_SOURCE_DIR}/src/rcg.cpp
   ${CMAKE_SOURCE_DIR}/src/rcg_util_omp.cpp
-  ${CMAKE_SOURCE_DIR}/src/Matrix.cpp)
+  ${CMAKE_SOURCE_DIR}/src/Matrix_omp.cpp)
 
 ## Executables
 add_executable(rcg-test
