Split rcg into rcg_omp and rcg_mpi.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,12 +75,12 @@ ${CMAKE_BINARY_DIR}/include)
 
 ## Libraries
 add_library(rcgomp
-  ${CMAKE_SOURCE_DIR}/src/rcg.cpp
+  ${CMAKE_SOURCE_DIR}/src/rcg_omp.cpp
   ${CMAKE_SOURCE_DIR}/src/rcg_util.cpp
   ${CMAKE_SOURCE_DIR}/src/Matrix_omp.cpp)
 
 add_library(rcgmpi
-  ${CMAKE_SOURCE_DIR}/src/rcg.cpp
+  ${CMAKE_SOURCE_DIR}/src/rcg_mpi.cpp
   ${CMAKE_SOURCE_DIR}/src/rcg_util.cpp
   ${CMAKE_SOURCE_DIR}/src/Matrix_omp.cpp)
 
