Rename RCGMPI->RCGPAR since there are OpenMP and MPI parallellizations.

--- a/config/mpi_config.hpp.in
+++ b/config/mpi_config.hpp.in
@@ -1,6 +1,6 @@
-#ifndef RCGMPI_MPI_CONFIG_HPP
-#define RCGMPI_MPI_CONFIG_HPP
+#ifndef RCGPAR_MPI_CONFIG_HPP
+#define RCGPAR_MPI_CONFIG_HPP
 
-#define RCGMPI_MPI_SUPPORT @RCGMPI_MPI_SUPPORT@
+#define RCGPAR_MPI_SUPPORT @RCGPAR_MPI_SUPPORT@
 
 #endif
