Add test for rcg.cpp::digamma.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,8 @@ if(CMAKE_BUILD_TYPE MATCHES Debug)
     add_test(runOmpTest runOmpTest)
     add_executable(runUtilTest ${CMAKE_SOURCE_DIR}/test/src/util_unittest.cpp)
     add_test(runUtilTest runUtilTest)
+    add_executable(runRcgTest ${CMAKE_SOURCE_DIR}/test/src/rcg_unittest.cpp)
+    add_test(runRcgTest runRcgTest)
   endif()
   if(MPI_FOUND)
     add_executable(runMpiTest ${CMAKE_SOURCE_DIR}/test/src/rcgpar_mpi_unittest.cpp)
@@ -136,6 +138,7 @@ if (OPENMP_FOUND)
   if(CMAKE_BUILD_TYPE MATCHES Debug)
     target_link_libraries(runOmpTest rcgomp rcgutils gtest gtest_main)
     target_link_libraries(runUtilTest rcgomp rcgutils gtest gtest_main)
+    target_link_libraries(runRcgTest rcgomp gtest gtest_main)
   endif()
 endif()
 
