Fix building tests when MPI is enabled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,7 +104,8 @@ if(CMAKE_BUILD_TESTS)
     ${CMAKE_SOURCE_DIR}/test/src/unittest_common_inputs.cpp)
   add_test(runUnitTests runUnitTests)
   if(MPI_FOUND)
-    add_executable(runMpiTest ${CMAKE_SOURCE_DIR}/test/src/rcgpar_mpi_unittest.cpp)
+    add_executable(runMpiTest ${CMAKE_SOURCE_DIR}/test/src/rcgpar_mpi_unittest.cpp
+      ${CMAKE_SOURCE_DIR}/test/src/unittest_common_inputs.cpp)
     add_test(runMpiTest runMpiTest)
   endif()
 endif()
