Fix linking against OpenMP.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,9 +27,9 @@ endif()
 find_package(OpenMP)
 if (OPENMP_FOUND)
   set(RCGPAR_OPENMP_SUPPORT 1)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GLIBCXX_PARALLEL")
-  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -D_GLIBCXX_PARALLEL")
-  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -D_GLIBCXX_PARALLEL")
+  set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS} -D_GLIBCXX_PARALLEL")
+  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -D_GLIBCXX_PARALLEL")
+  set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS} -D_GLIBCXX_PARALLEL")
 else()
   set(RCGPAR_OPENMP_SUPPORT 0)
 endif()
@@ -153,9 +153,12 @@ endif()
 
 # Link libraries
 if (OPENMP_FOUND)
-  target_link_libraries(rcgomp OpenMP::OpenMP_CXX)
-  target_link_libraries(rcgomp rcgutils)
   if (MPI_FOUND)
     target_link_libraries(rcgmpi OpenMP::OpenMP_CXX) ## Hybrid parallellization
+  endif()
+  if (BUILD_TESTS)
+    target_link_libraries(rcgomp rcgutils runUnitTests OpenMP::OpenMP_CXX)
+  else()
+    target_link_libraries(rcgomp rcgutils OpenMP::OpenMP_CXX)
   endif()
 endif()
