Use RCGPAR_MPI_MAX_PROCESSES (set via cmake, default 1024) to control the maximum number of processess allowed.

--- a/config/mpi_config.hpp.in
+++ b/config/mpi_config.hpp.in
@@ -22,5 +22,6 @@
 #define RCGPAR_MPI_CONFIG_HPP
 
 #define RCGPAR_MPI_SUPPORT @RCGPAR_MPI_SUPPORT@
+#define RCGPAR_MPI_MAX_PROCESSES @RCGPAR_MPI_MAX_PROCESSES@
 
 #endif
