--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,11 @@ find_package(MPI)
 if (MPI_FOUND)
   set(RCGPAR_MPI_SUPPORT 1)
   include_directories(MPI_C_INCLUDE_DIRS)
+  if (CMAKE_MPI_MAX_PROCESSES)
+    set(RCGPAR_MPI_MAX_PROCESSES ${CMAKE_MPI_MAX_PROCESSES})
+  else()
+    set(RCGPAR_MPI_MAX_PROCESSES 1024)
+  endif()
 else()
   set(RCGPAR_MPI_SUPPORT 0)
 endif()
