Skip the Open MPI cxx bindings when building to avoid a potential compiler error (see https://github.com/open-mpi/ompi/issues/5157).

--- a/config/mpi_config.hpp.in
+++ b/config/mpi_config.hpp.in
@@ -25,6 +25,7 @@
 #define RCGPAR_MPI_MAX_PROCESSES @RCGPAR_MPI_MAX_PROCESSES@
 
 #if defined(RCGPAR_MPI_SUPPORT) && (RCGPAR_MPI_SUPPORT) == 1
+#define OMPI_SKIP_MPICXX 1 // See https://github.com/open-mpi/ompi/issues/5157
 #include <mpi.h>
 #endif
 
