--- a/config/mpi_config.hpp.in
+++ b/config/mpi_config.hpp.in
@@ -27,6 +27,7 @@
 #if defined(RCGPAR_MPI_SUPPORT) && (RCGPAR_MPI_SUPPORT) == 1
 #define OMPI_SKIP_MPICXX 1 // See https://github.com/open-mpi/ompi/issues/5157
 #include <mpi.h>
+#include "bigmpi.h"
 #endif
 
 #endif
