added mixture components function using torch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -223,8 +223,10 @@ if (OPENMP_FOUND)
     target_link_libraries(rcgmpi OpenMP::OpenMP_CXX ${LIBRARY_OUTPUT_PATH}/libbigmpi.a "${TORCH_LIBRARIES}") ## Hybrid parallellization
   endif()
   if (BUILD_TESTS)
+    target_link_libraries(rcgutils "${TORCH_LIBRARIES}")
     target_link_libraries(rcgomp rcgutils runUnitTests OpenMP::OpenMP_CXX "${TORCH_LIBRARIES}")
   else()
+    target_link_libraries(rcgutils "${TORCH_LIBRARIES}")
     target_link_libraries(rcgomp rcgutils OpenMP::OpenMP_CXX "${TORCH_LIBRARIES}")
   endif()
 endif()
